--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         at a cozy hotel and slept right thorugh the afternoon.
       </p>
       <p>Cameron Highlands</p>
+      <div class="p-pic">
       <img src="Images/iambored.jpg" alt="The Scenery" class="pic1">
+      </div>
+      <div class="description">
       <p>
         Cameron Highlands is the most popular of the highland retreats in
         Malaysia. Located at almost 2,000 meters at its highest point, Camerons
@@ -32,6 +35,7 @@
         escape for city-dwellers.The township of Camerons is itself divided into
         Tanah Rata, Brinchang and Ringlet.
       </p>
+    </div>
     </div>
     <!-- section 3 -->
     <div class="section-divider midimg">
