--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         at a cozy hotel and slept right thorugh the afternoon.
       </p>
       <p>Cameron Highlands</p>
+      <div class="flex-container">
       <div class="p-pic">
-      <img src="Images/iambored.jpg" alt="The Scenery" class="pic1">
+      <img src="Images/iambored.jpg" alt="The Scenery">
       </div>
       <div class="description">
       <p>
@@ -35,6 +36,7 @@
         escape for city-dwellers.The township of Camerons is itself divided into
         Tanah Rata, Brinchang and Ringlet.
       </p>
+     </div> 
     </div>
     </div>
     <!-- section 3 -->
